# paper_flexitarianism

./: exemplo_minimo.ipynb  pyproject.toml  testes.ipynb
input/: flexitarianism.csv
output/: flexitarianism_reasons.csv  topics_per_education_reason.csv  topics_per_gender_reason.csv  topics_per_motivation_reason.csv
