[tool.poetry]
name = "paper-flexitarianism"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <elias.jacob@ufrn.br>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
spacy = "3.7.6"
pandas = "^2.2.3"
openai = "^1.51.2"
langchain-openai = "^0.2.2"
llvmlite = "^0.43.0"
numpy = "1.26.4"
numba = "^0.60.0"
bertopic = "^0.16.3"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
python-dotenv = "^1.0.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
